chore(structure): reorganize packages and apply minor cleanups